<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_coordinator"
    style="@style/Widget.Design.CoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.typsy.ui.screens.conversionList.ConversionListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/dialog_card"
            style="@style/CardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@color/colorPrimary">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/app_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:layout_margin="8dp"
                        android:src="@drawable/typsy" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/app_icon"
                        android:layout_centerHorizontal="true"
                        android:text="@string/app_name"
                        android:textAllCaps="true"
                        android:textColor="@color/textColorPrimaryLight"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_light_background"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="cursive"
                        android:gravity="center|top"
                        android:text="@string/credits"
                        android:textColor="@color/textColorPrimaryDark"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:fontFamily="serif"
                        android:layout_gravity="center"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/andela"
                        android:textColor="@color/textColorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:fontFamily="serif"
                        android:layout_gravity="center"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/google"
                        android:textColor="@color/textColorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:fontFamily="serif"
                        android:layout_gravity="center"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/udacity"
                        android:textColor="@color/textColorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </LinearLayout>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:fontFamily="cursive"
                    android:text="@string/api_cryptocompare_com"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/rating_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:elevation="8dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_star" />
</android.support.design.widget.CoordinatorLayout>
