<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/delete_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_delete" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/delete_icon"
            android:textAllCaps="true"
            android:text="@string/delete"
            android:textColor="@color/colorAccent"
            android:textSize="13sp" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.6">

                <RelativeLayout
                    android:id="@+id/conversion_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/crypto_avatar"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/currency_symbol" />


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/crypto_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/crypto_avatar"
                        android:fontFamily="monospace"
                        android:textColor="@color/green"
                        android:textSize="16sp"
                        tools:text="BTC" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/crypto_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/crypto_code"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@id/crypto_avatar"
                        android:ellipsize="end"
                        android:fontFamily="monospace"
                        android:maxLines="1"
                        android:textColor="@color/textColorSecondaryDark"
                        android:textSize="12sp"
                        tools:text="B " />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/conversion_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/crypto_code"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@id/crypto_symbol"
                        android:ellipsize="end"
                        android:fontFamily="monospace"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="@color/textColorSecondaryDark"
                        android:textSize="12sp"
                        tools:text="0.59999" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/conversion_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@id/crypto_code"
                        android:contentDescription="@string/conversion_symbol"
                        app:srcCompat="@drawable/ic_compare_dark" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/currency_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/conversion_symbol"
                        android:fontFamily="monospace"
                        android:textColor="@color/green"
                        android:textSize="16sp"
                        tools:text="USD" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/currency_avatar"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/currency_code"
                        android:contentDescription="@string/currency_symbol" />

                </RelativeLayout>


                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/conversion_layout"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@id/divider"
                    android:layout_margin="8dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/currency_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="monospace"
                        android:textColor="@color/textColorPrimaryDark"
                        android:textSize="18sp"
                        tools:text="$" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/conversion_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/currency_symbol"
                        android:ellipsize="end"
                        android:fontFamily="monospace"
                        android:maxLines="1"
                        android:textColor="@color/textColorPrimaryDark"
                        android:textSize="18sp"
                        tools:text="1,234,567,900.0" />
                </RelativeLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background">

                <android.support.v7.widget.CardView
                    android:id="@+id/percentage_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/percentage_profit_loss"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:minWidth="50dp"
                        android:paddingBottom="4dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="4dp"
                        android:textColor="@color/green"
                        android:textSize="14sp"
                        tools:text="10.02%" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/updated_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="monospace"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    tools:text="10/12" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/updated_date"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="monospace"
                    android:text="@string/updated"
                    android:textColor="@color/textColorPrimaryLight"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</FrameLayout>